...
                    android:text="@string/amount"
                    android:textSize="16sp"
                    android:textColor="@color/medium_gray"
                    android:layout_marginBottom="8dp"/>

                <EditText
                    android:id="@+id/entryAmount"
                    android:layout_width="match_parent"
                    android:autofillHints=""
                    android:maxWidth="450dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ios_field_outline"
                    android:padding="16dp"
...
                    android:hint="@string/category"
                    app:endIconMode="dropdown_menu"
                    android:layout_marginBottom="20dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:id="@+id/entryCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:minHeight="50dp"
                        android:textSize="16sp"
                        android:textColor="@color/black"
...
                    android:layout_height="80dp"
                    android:background="@drawable/ios_field_outline"
                    android:layout_marginBottom="20dp"
                    tools:ignore="NestedScrolling">

                    <EditText
                        android:id="@+id/entryDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:background="@null"
                        android:padding="16dp"
                        android:hint="@string/incomeDescription"
...
                        android:inputType="textMultiLine"
                        android:scrollbars="vertical"/>
                </ScrollView>

                <!--  Selection Button -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSelectDate"
                    android:layout_width="match_parent"
                    android:maxWidth="450dp"
                    android:layout_height="wrap_content"
                    android:text="@string/select_date"
                    android:textAllCaps="false"
                    android:textSize="16sp"
...
                    app:iconGravity="end"
                    android:minHeight="50dp"
                    android:layout_marginBottom="20dp"/>

                <!-- Add Income Button (Confirms above Information is Correct)-->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonAddEntry"
                    android:layout_width="match_parent"
                    android:maxWidth="450dp"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:textStyle="bold"
...
