...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.4">

                <!-- Email -->
                <EditText
                    android:id="@+id/email"
                    style="@style/IOSInputFieldStyle"
                    android:autofillHints="emailAddress"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>

                <!-- Password with toggle -->
...
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/ios_blue"
                    app:hintEnabled="false"
                    app:boxBackgroundMode="none">

                    <EditText
                        android:id="@+id/password"
                        style="@style/IOSInputFieldStyle"
                        android:autofillHints="password"
                        android:hint="@string/password"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Login Button -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginButton"
                    style="@style/IOSPrimaryButtonStyle"
                    android:text="@string/login" />

                <!-- Go Back -->
                <TextView
                    android:id="@+id/goBack"
...
